# ConGen

./: CMakeLists.txt  License.txt  README.md
Frontiers2021manuscript/json/: pd_new3.json  pd_new4.json
Frontiers2021manuscript/nml/: UC2_final.xml  UC3_simple_multiscale.xml  pd_final.xml  pd_new.xml  pd_new1.xml  pd_new2.xml  pd_new3.xml  pd_new4.xml
paper/: .pd_new5.xml.swp
paper/json/: UC2_step1.json  UC2_step2.json  UC2_step3.json  pd_new1.json  pd_new2.json  pd_new5.json
paper/nml/: pd_new5.xml  pd_new_finaltest.xml
python/: CMakeLists.txt  setup.py.in  simple_network.xml  something.py  test.py
python/vicogen/: __init__.py  __main__.py  _nest.py  _nest_to_tvb.py  _run_mpi_nest_template.sh  _run_mpi_nest_to_tvb_template.sh  _run_mpi_tvb_to_nest_template.sh  _translator.py  _tvb.py  _tvb_cosim_template.py  _tvb_to_nest.py  _vicogen.py  commands.py
python/vicogen/neuroml/: NetworkML_ViCoGen_file_format.xsd  __init__.py  _misc.py  _neuroml.py  distributions.py  inputs.py  model.py  outputs.py  parsing.py  populations.py  projections.py  synapses.py
script/: CMakeLists.txt  README.md  csa_from_json.py  csa_misc_functions.py  init.sh.in  potjans_diesmann_conn_model.json  potjans_diesmann_conn_model.py  potjans_diesmann_nest.py
test/: CMakeLists.txt  cython_env_test_runner.sh.in
test/models/: all_to_all_model.xml  connection_instance_model.xml  fan_in_out_model.xml  one_to_one_model.xml  parameter_distribution.xml  potjans_diesmann.xml  random_model.xml  spatial_connectivity_model.xml
test/python/: csa_test.py  nest_test.py  parsing_test.py
